Update javafx-bookmarks.md